--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "lru-cache": "^4.1.1",
     "object-sizeof": "^1.2.0",
     "random-js": "^1.0.3",
-    "typescript": "2.8.3",
+    "typescript": "^4.5.2",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
